# hack-ops

./: .dockerignore  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .vale.ini  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  QUALITY_SCORE.md  README.md  VERSION.md  docker-compose.test.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  turbo.json
.devcontainer/: README.md  devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  version-manifest.json
.github/ISSUE_TEMPLATE/: app-bug.yml  app-feature.yml  config.yml  infrastructure-request.yml  scenario-request.yml
.github/agents/: 01-conductor.agent.md  02-requirements.agent.md  03-architect.agent.md  04-design.agent.md  05-bicep-planner.agent.md  06-bicep-code-generator.agent.md  07-deploy.agent.md  08-as-built.agent.md  09-diagnose.agent.md  10-challenger.agent.md  10-context-optimizer.agent.md  11-app-builder.agent.md  11-app-scaffolder.agent.md  12-api-builder.agent.md  12-app-tester.agent.md  13-app-conductor.agent.md  13-frontend-builder.agent.md  14-test-writer.agent.md  15-app-deployer.agent.md  16-app-conductor.agent.md  bug-fix-teammate.agent.md  cleanup-specialist.agent.md
.github/instructions/: agent-definitions.instructions.md  agent-research-first.instructions.md  api-routes.instructions.md  azure-artifacts.instructions.md  bicep-code-best-practices.instructions.md  bicep-governance.instructions.md  code-commenting.instructions.md  code-review.instructions.md  context-optimization.instructions.md  context7-mcp.instructions.md  dependency-management.instructions.md  docs.instructions.md  github-actions.instructions.md  golden-principles.instructions.md  javascript.instructions.md  markdown.instructions.md  nextjs.instructions.md  python.instructions.md  react-components.instructions.md  shell.instructions.md  testing.instructions.md  typescript.instructions.md
.github/prompts/: app-01-scaffold.prompt.md  app-02-auth.prompt.md  app-03-api-hackathons.prompt.md  app-04-api-scoring.prompt.md  app-05-api-challenges.prompt.md  app-06-api-admin.prompt.md  app-07-leaderboard.prompt.md  app-08-dashboard.prompt.md  app-09-tests.prompt.md  app-10-ci-cd.prompt.md  backlog-triage.prompt.md  context-optimization-plan.prompt.md  context-optimization-resume.prompt.md  context-optimize.prompt.md  doc-api-contract-generator.prompt.md  doc-data-model-generator.prompt.md  doc-gardening.prompt.md  doc-prd-generator.prompt.md  generate-backlog.prompt.md  git-commit-push.prompt.md  git-quick-commit.prompt.md  infra-01-requirements.prompt.md  infra-02-architecture.prompt.md  infra-03-design.prompt.md  infra-04-governance.prompt.md  infra-05-bicep-generate.prompt.md  infra-06-deploy.prompt.md  (+22 more)
archive/: README.md
docs/: README.md  api-contract.md  branch-ruleset-config.md  data-model.md  dev-containers.md  environment-config.md  first-deploy-runbook.md  hackops-user-guide.md  local-dev-guide.md  prd.md  project-overview.md  quickstart.md  security-checklist.md  testing-strategy.md  ui-pages.md  workflow.md
mcp/azure-pricing-mcp/: pyproject.toml  requirements.txt
mcp/azure-pricing-mcp/src/azure_pricing_mcp/: error_codes.py
mcp/azure-pricing-mcp/src/azure_pricing_mcp.egg-info/: PKG-INFO  requires.txt
scripts/: check-docs-freshness.mjs  cleanup-test-resources.ps1  seed-cosmos.ts  setup-acr-purge.sh  setup-github-oauth.sh  setup-labels.sh  setup-milestones.sh  smoke-test.sh  validate-agent-frontmatter.mjs  validate-business-rules.mjs  validate-governance-refs.mjs  validate-h2-sync.mjs  validate-instruction-references.mjs  validate-version-manifest.mjs
(+258 files in other folders)
