[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-pricing-mcp"
version = "4.1.0"
description = "A Model Context Protocol server for querying Azure retail pricing information"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Jonathan Vella"},
    {name = "Nadav Ben Haim"},
    {name = "Michael Liav"}
]
maintainers = [
    {name = "Jonathan Vella"}
]
keywords = ["azure", "pricing", "mcp", "model-context-protocol", "cloud-costs", "cost-estimation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "mcp>=1.8.0",
    "aiohttp>=3.11.0",
    "pydantic>=2.10.0",
    "cachetools>=5.5.0",
    "uvicorn>=0.34.0",
    "starlette>=0.45.0",
    "sse-starlette>=2.2.0",
    "azure-identity>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/jonathan-vella/hack-ops"
Repository = "https://github.com/jonathan-vella/hack-ops"
Issues = "https://github.com/jonathan-vella/hack-ops/issues"
Documentation = "https://github.com/jonathan-vella/hack-ops/tree/main/mcp/azure-pricing-mcp#readme"

[project.scripts]
azure-pricing-mcp = "azure_pricing_mcp.server:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["azure_pricing_mcp*"]
exclude = ["tests*"]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async test",
    "integration: mark test as integration test (requires network)",
    "slow: mark test as slow running",
]
norecursedirs = [".git", ".venv", "build", "dist", "*.egg"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used check for tests
